# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  flake8-and-pytest.yml  flake8-pytest-codecoverage.yml  lint.yml
gendiff/: __init__.py  args_gendiff.py  example.py.save  gendiff.py  gendiff_all.py  gendiff_from_plain.py  gendiff_from_stylish.py  generate_diff.py  generator.py  json.py  parser.py  plain.py  stylish.py
gendiff/formater/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_gendiff.py  test_gendiff_all.py  test_gendiff_from_plain.py  test_gendiff_from_stylish.py  test_generate_diff.py  test_generator.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: hexlet_answer_json.json
